--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   },
   "homepage": "https://github.com/victordibia/tjdj#readme",
   "dependencies": {
-    "request": "^2.79.0"
+    "request": "^2.79.0",
+    "watson-developer-cloud": "^2.15.2",
+    "web-audio-api": "^0.2.2"
   }
 }
