convert mp3 to wav

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/victordibia/tjdj#readme",
   "dependencies": {
+    "node-aplay": "^1.0.3",
     "request": "^2.79.0",
     "watson-developer-cloud": "^2.15.2",
     "web-audio-api": "^0.2.2"
