add voice command and led support

--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
   },
   "homepage": "https://github.com/victordibia/tjdj#readme",
   "dependencies": {
+    "mic": "^2.1.1",
     "node-aplay": "^1.0.3",
     "request": "^2.79.0",
+    "rpi-ws281x-native": "^0.8.1",
     "watson-developer-cloud": "^2.15.2",
     "web-audio-api": "^0.2.2"
   }
